[package]
name = "game-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6.11", features = ["ws", "headers"] }
futures = "0.3"
headers = "0.3"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.4.0", features = ["fs", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
once_cell = "1.17"
